src/test/ui/nll/issue-45696-scribble-on-boxed-borrow.stderr
error[E0713]: borrow may still be in use when destructor runs
  --> $DIR/issue-45696-scribble-on-boxed-borrow.rs:34:5
   |
LL |     &mut *s.0
   |     ^^^^^^^^^
LL | }
   | -- borrow later used here
   | |
   | here, drop of `s` needs exclusive access to `*s.0`, because the type `Scribble<'_>` implements the `Drop` trait
   |
   = note: consider using a `let` binding to create a longer lived value

error[E0713]: borrow may still be in use when destructor runs
  --> $DIR/issue-45696-scribble-on-boxed-borrow.rs:39:5
   |
LL |     &mut *(*s).0
   |     ^^^^^^^^^^^^
LL | }
   | -- borrow later used here
   | |
   | here, drop of `s` needs exclusive access to `*s.0`, because the type `Scribble<'_>` implements the `Drop` trait
   |
   = note: consider using a `let` binding to create a longer lived value

error[E0713]: borrow may still be in use when destructor runs
  --> $DIR/issue-45696-scribble-on-boxed-borrow.rs:44:5
   |
LL |     &mut *(**s).0
   |     ^^^^^^^^^^^^^
LL | }
   | -- borrow later used here
   | |
   | here, drop of `s` needs exclusive access to `*s.0`, because the type `Scribble<'_>` implements the `Drop` trait
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0713`.
